--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,49 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h4{
+  text-align: center;
+  color: black;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+  margin: 0;
+  color: royalblue
+}
+body{
+  color: white;
+  text-align: center;
+background-color: bisque;
+ 
+}
+.visHolder{
+  position: absolute;
+  left: 22vw;
+  top: 10em;
+  border: 5px solid black;
+  border-radius: 10px;
+  padding-top: 10px;
+  
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#toolti{
+  display: block;
+  
+}
+#tooltip{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  padding: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font: 12px;
+  background-color: rgba(0, 0, 128, 0.7);
+  border-radius: 20px;
+  pointer-events: none;
 }
